# flyouts

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  maybe.rs
te/: Cargo.toml
te/src/: main.rs
te/te/: yes.cpp
