[package]
name = "tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-hide", "window-show", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
windows = { version = "0.51.1", features = ["Foundation", "Media_Control", "Foundation_Collections", "Storage_Streams"] }
willhook = "0.6.1"
winsafe = { version = "0.0.18", features = ["ole", "user", "kernel"] }
color-thief = "0.2.2"
image = { version = "0.24.7", features = ["rgb"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
