[package]
name = "te"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-thief = "0.2.2"
dotnet = "0.0.0"
image = { version = "0.24.7", features = ["rgb"] }
tasklist = "0.2.12"
tokio = { version = "1.32.0", features = ["full"] }
windows = { version = "0.51.1", features = ["Graphics_Imaging", "Foundation", "Foundation_Collections", "Media_Control", "Storage_Streams", "Win32_System_ProcessStatus", "Win32_Foundation"] }
winsafe = { version = "0.0.18", features = ["user", "ole", "gui", "dshow", "dwm", "dxgi", "mf", "taskschd", "version", "kernel"] }
